--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
       # Connect your workspace on nx.app and uncomment this to enable task distribution.
       # The "--stop-agents-after" is optional, but allows idle agents to shut down once the "build" targets have been requested
-      # - run: npx nx-cloud start-ci-run --distribute-on="5 linux-medium-jvm" --stop-agents-after="build"
+      - run: npx nx-cloud start-ci-run --distribute-on="8 linux-medium-jvm" --stop-agents-after="build"
 
       - name: Set up JDK 17 for x64
         uses: actions/setup-java@v4
@@ -30,9 +30,8 @@ jobs:
           architecture: x64
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
 
       - uses: nrwl/nx-set-shas@v4
-
 
       - run: ./nx affected -t test build
